--- a/Code/p-app-lecture/AppShell.xaml
+++ b/Code/p-app-lecture/AppShell.xaml
@@ -8,7 +8,7 @@
     Title="p_app_lecture">
 
     <ShellContent
-        Title="Home"
+        Title="Livres"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
