--- a/Code/p-app-lecture/Lecture.xaml
+++ b/Code/p-app-lecture/Lecture.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="p_app_lecture.Lecture"
-             Title="Lecture">
+             Title="Lecture"
+             Background="AliceBlue">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
