--- a/Code/p-app-lecture/MainPage.xaml
+++ b/Code/p-app-lecture/MainPage.xaml
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="p_app_lecture.MainPage">
+             x:Class="p_app_lecture.MainPage"
+             Title="Home"
+             BackgroundColor="AliceBlue">
 
-    <ContentPage.ToolbarItems>
-        <ToolbarItem
-            IconImageSource="menu_burger_icon.png"
-            Priority="0"
-            Order="Primary"
-            Clicked="MenuBurger_Clicked"
-            />
-    </ContentPage.ToolbarItems>
-
+    <CollectionView ItemsSource="{Binding Books}">
+        <CollectionView.ItemsLayout>
+            <GridItemsLayout Orientation="Vertical" Span="2" />
+        </CollectionView.ItemsLayout>
+        <CollectionView.ItemTemplate>
+            <DataTemplate>
+                <Image Source="{Binding CoverImagePath}" Aspect="AspectFill" />
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
+    
 
 </ContentPage>
